[package]
name = "lamport_signature"
version = "0.1.1"
authors = ["Henrique Sasaki Yuya <moriturus@alimensir.com>"]
license = "MIT"
description = "A Rust implementation of the Lamport one-time signature scheme."
repository = "https://github.com/moriturus/lamport_signature"
readme = "README.md"
keywords = ["lamport", "signature"]
documentation = "https://docs.rs/lamport_signature"

[dependencies]
rand = "0.5.0"
digest = "0.7.2"
typenum = "1.10.0"

[dev-dependencies]
sha2 = "0.7.1"
sha3 = "0.7.3"
groestl = "0.7.0"
blake2 = "0.7.1"
whirlpool = "0.7.1"

